--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/chatapp?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://containers-us-west-153.railway.app:6567/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Calebhurst1!
+spring.datasource.password=WqWrkA5zSfsgguc5AkHG
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache = false
+
