--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-153.railway.app:6567/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:GG25FEEde36E25fh-5G-11Fe1aBeH3Gf@mysql-1.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=WqWrkA5zSfsgguc5AkHG
+spring.datasource.password=GG25FEEde36E25fh-5G-11Fe1aBeH3Gf
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
